# keynest

./: .gitignore  .npmrc  CLAUDE.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.local.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  store.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: accessibility.rs  lib.rs  main.rs  overlay.rs  tray.rs
apps/desktop/src/components/: FaviconImage.tsx
apps/desktop/src/lib/: local-vault.ts
apps/desktop/src/views/: AddItemView.tsx  ItemDetailView.tsx  OverlayView.tsx  RegisterView.tsx  SearchView.tsx  SettingsView.tsx  UnlockView.tsx
apps/extension/: package.json  tsconfig.json  vite.config.ts
apps/extension/public/: manifest.json
apps/extension/src/background/: index.ts
apps/extension/src/content/: index.ts
apps/extension/src/popup/: Popup.tsx  index.tsx  popup.css  popup.html
apps/server/: .env.example  package.json
apps/server/src/: index.ts
apps/server/src/db/: index.ts  schema.ts
apps/server/src/lib/: auth.ts
apps/server/src/middleware/: auth.ts
apps/server/src/routes/: auth.ts  vault.ts
