[package]
name = "keynest"
version = "0.1.0"
description = "Keynest Password Manager"
authors = ["Keynest"]
edition = "2021"

[lib]
name = "keynest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "keynest"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
